# Numerical-Finance

./: .gitignore  CMakeLists.txt  Numerical_finance_project.depend  Numerical_finance_project.layout  README.md  main.cpp
finite_difference/: BlackScholesND.cpp  MonteCarlo.cpp  MonteCarlo.hpp  TESTER_finite_difference.cpp  TESTER_finite_difference.cpp.save-failed  TESTER_finite_difference.hpp  black_scholesND.cpp  black_scholesND.hpp  black_scholes_1d.cpp  black_scholes_1d.hpp  black_scholes_2d.cpp  black_scholes_2d.hpp  black_scholes_nd.cpp  black_scholes_nd.hpp  brownian_1d.cpp  brownian_1d.hpp  brownian_nd.cpp  brownian_nd.hpp  bs.cpp  bs.hpp  heston.cpp  heston.hpp  null_function.cpp  null_function.hpp  pde_grid_2d.cpp  pde_grid_2d.hpp  r1r1_function.cpp  r1r1_function.hpp  r2r1_function.cpp  r2r1_function.hpp  random_process.cpp  random_process.hpp  rnr1_function.cpp  rnr1_function.h  single_path.cpp  single_path.hpp  static_control_variate.cpp  static_control_variate.hpp  vanilla_boundaries.cpp  vanilla_boundaries.hpp  (+2 more)
random_generator/: TESTER_random_generator.cpp  TESTER_random_generator.hpp  continuous_generator.cpp  continuous_generator.hpp  discrete_generator.cpp  discrete_generator.hpp  quasi_random_generator.cpp  quasi_random_generator.hpp  random_generator.cpp  random_generator.hpp  uniform_generator.cpp  uniform_generator.hpp
utils/: matrix.cpp  matrix.hpp
